[tool.poetry]
name = "repl_python3_ronz-AMOGUS"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
faker = "^8.1.2"
redis = "^3.5.3"
aredis = "^1.1.8"
youtube-dl = "^2021.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
