[tool.poetry]
name = "repl_python3_ronz-AMOGUS"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
faker = "^8.1.2"
aioredis = "^2.0.0a1"
youtube-dl = "^2021.4.26"
ujson = "^4.0.2"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
